--- a/stotram/venkateswara-stotram.html
+++ b/stotram/venkateswara-stotram.html
@@ -39,7 +39,7 @@
                             verseNumber: 1,
                             lines: [
                                 {
-                                    kannada: "ಕಮಲಾಕುಚಚೂಚುಕಕುಂಕುಮತೋ",
+                                    kannada: "ಕಮಲಾಕುಚ-ಚೂಚುಕ-ಕುಂಕುಮತೋ",
                                     transliteration: "kamalākuca-cūcuka-kunkuma-to",
                                     words: [
                                         {
@@ -69,7 +69,7 @@
                                         }]
                                 },
                                 {
-                                    kannada: "ನಿಯತಾರುಣಿತಾತುಲನೀಲತನೋ |",
+                                    kannada: "ನಿಯತಾರುಣಿ-ತಾತುಲ-ನೀಲತನೋ |",
                                     transliteration: "niyatāruṇi tātula nīlatanō |",
                                     words: [
                                         {
@@ -90,7 +90,7 @@
                                     ]
                                 },
                                 {
-                                    kannada: "ಕಮಲಾಯತಲೋಚನ ಲೋಕಪತೇ",
+                                    kannada: "ಕಮಲಾಯತ-ಲೋಚನ ಲೋಕಪತೇ",
                                     transliteration: "kamalāyata lōchana lōkapatē",
                                     words: [
                                         {
@@ -110,7 +110,7 @@
                                         }]
                                 },
                                 {
-                                    kannada: "ವಿಜಯೀಭವ ವೇಂಕಟಶೈಲಪತೇ || ೧ ||",
+                                    kannada: "ವಿಜಯೀಭವ ವೇಂಕಟ-ಶೈಲಪತೇ || ೧ ||",
                                     transliteration: "vijayībhava vēṅkaṭa śailapatē || 1 ||",
                                     words: [
                                         {
@@ -126,13 +126,13 @@
                                     ]
                                 }
                             ],
-                            completeMeaning: "Lotus like breasts of Lord are ever red with the stains of kumkum that is being sprinkled on his chest during the daily worships, whereas his body is blue-colored. Victory to Thee, O Lord of Venkata hill, whose eyes are wide like lotus petals."
+                            completeMeaning: "whose lotus like chest are ever red coloured with sprinklings of KumKum (from daily worship).. whose actual body is blue and bright hued..whose eyes are lotus like.. the lord of the universe.. let there be victory to the lord of the Venkata hills.."
                         },
                         {
                             verseNumber: 2,
                             lines: [
                                 {
-                                    kannada: "ಸಚತುರ್ಮುಖಷಣ್ಮುಖಪಂಚಮುಖ",
+                                    kannada: "ಸಚತುರ್ಮುಖ-ಷಣ್ಮುಖ-ಪಂಚಮುಖ",
                                     transliteration: "sachaturmukha ṣaṇmukha pañchamukha",
                                     words: [
                                         {
@@ -158,7 +158,7 @@
                                     ]
                                 },
                                 {
-                                    kannada: "ಪ್ರಮುಖಾಖಿಲದೈವತಮೌಳಿಮಣೇ |",
+                                    kannada: "ಪ್ರಮುಖಾ-ಖಿಲದೈವತ-ಮೌಳಿಮಣೇ |",
                                     transliteration: "pramukhā khila daivata mauḷi maṇē |",
                                     words: [
                                         {
@@ -184,7 +184,7 @@
                                     ]
                                 },
                                 {
-                                    kannada: "ಶರಣಾಗತವತ್ಸಲ ಸಾರನಿಧೇ",
+                                    kannada: "ಶರಣಾಗ-ತವತ್ಸಲ ಸಾರನಿಧೇ",
                                     transliteration: "śaraṇāgata vatsala sāra nidhē",
                                     words: [
                                         {
@@ -210,7 +210,7 @@
                                     ]
                                 },
                                 {
-                                    kannada: "ಪರಿಪಾಲಯ ಮಾಂ ವೃಷಶೈಲಪತೇ || ೨ ||",
+                                    kannada: "ಪರಿಪಾಲಯ ಮಾಂ ವೃಷ-ಶೈಲಪತೇ || ೨ ||",
                                     transliteration: "paripālaya māṃ vṛṣa śaila patē || 2 ||",
                                     words: [
                                         {
@@ -264,7 +264,7 @@
                                     ]
                                 },
                                 {
-                                    kannada: "-ರನುವೇಲಕೃತೈರಪರಾಧಶತೈಃ |",
+                                    kannada: "-ರನು-ವೇಲಕೃತೈ-ರಪರಾಧಶತೈಃ |",
                                     transliteration: "-ranuvēlakṛtai raparādha śataiḥ |",
                                     words: [
                                         {
@@ -295,7 +295,7 @@
                                     ]
                                 },
                                 {
-                                    kannada: "ಭರಿತಂ ತ್ವರಿತಂ ವೃಷಶೈಲಪತೇ",
+                                    kannada: "ಭರಿತಂ ತ್ವರಿತಂ ವೃಷ-ಶೈಲಪತೇ",
                                     transliteration: "bharitaṃ tvaritaṃ vṛṣa śaila patē",
                                     words: [
                                         {
@@ -348,7 +348,7 @@
                             verseNumber: 4,
                             lines: [
                                 {
-                                    kannada: "ಅಧಿವೇಂಕಟಶೈಲಮುದಾರಮತೇ-",
+                                    kannada: "ಅಧಿ-ವೇಂಕಟ-ಶೈಲ-ಮುದಾರಮತೇ-",
                                     transliteration: "adhi vēṅkaṭa śaila mudāra matē-",
                                     words: [
                                         {
@@ -374,7 +374,7 @@
                                     ]
                                 },
                                 {
-                                    kannada: "-ರ್ಜನತಾಭಿಮತಾಧಿಕದಾನರತಾತ್ |",
+                                    kannada: "-ರ್ಜನತಾಭಿ-ಮತಾಧಿಕ-ದಾನರತಾತ್ |",
                                     transliteration: "-r janatābhimata adhika dāna ratāt |",
                                     words: [
                                         {
@@ -468,7 +468,7 @@
                             verseNumber: 5,
                             lines: [
                                 {
-                                    kannada: "ಕಲ ವೇಣುರವಾವಶ ಗೋಪವಧೂ",
+                                    kannada: "ಕಲ ವೇಣುರ-ವಾವಶ ಗೋಪವಧೂ",
                                     transliteration: "kala vēṇu-ravāvaśa gōpa-vadhū",
                                     words: [
                                         {
@@ -499,7 +499,7 @@
                                     ]
                                 },
                                 {
-                                    kannada: "ಶತಕೋಟಿ ವೃತಾತ್ ಸ್ಮರಕೋಟಿ ಸಮಾತ್",
+                                    kannada: "ಶತ-ಕೋಟಿ ವೃತಾತ್-ಸ್ಮರ-ಕೋಟಿ ಸಮಾತ್",
                                     transliteration: "śata kōṭi vṛtāt smara kōṭi samāt",
                                     words: [
                                         {
@@ -525,7 +525,7 @@
                                     ]
                                 },
                                 {
-                                    kannada: "ಪ್ರತಿವಲ್ಲವಿಕಾ ಅಭಿಮತಾತ್ ಸುಖದಾತ್",
+                                    kannada: "ಪ್ರತಿ-ವಲ್ಲವಿಕಾ ಅಭಿ-ಮತಾತ್ ಸುಖದಾತ್",
                                     transliteration: "prati vallavikā abhimatāt sukha-dāt",
                                     words: [
                                         {
@@ -588,7 +588,7 @@
                             verseNumber: 6,
                             lines: [
                                 {
-                                    kannada: "ಅಭಿರಾಮಗುಣಾಕರ ದಾಶರಥೇ",
+                                    kannada: "ಅಭಿರಾಮ-ಗುಣಾಕರ ದಾಶರಥೇ",
                                     transliteration: "abhirāma guṇākara dāśaradhē",
                                     words: [
                                         {
@@ -609,7 +609,7 @@
                                     ]
                                 },
                                 {
-                                    kannada: "ಜಗದೇಕಧನುರ್ಧರ ಧೀರಮತೇ |",
+                                    kannada: "ಜಗದೇಕ-ಧನುರ್ಧರ ಧೀರಮತೇ |",
                                     transliteration: "jagadēka dhanurdhara dhīramatē |",
                                     words: [
                                         {
@@ -656,7 +656,7 @@
                                     ]
                                 },
                                 {
-                                    kannada: "ವರದೋ ಭವ ದೇವ ದಯಾಜಲಧೇ || ೬ ||",
+                                    kannada: "ವರದೋ ಭವ ದೇವ ದಯಾ-ಜಲಧೇ || ೬ ||",
                                     transliteration: "varadō bhava dēva dayā jaladhē || 6 ||",
                                     words: [
                                         {
@@ -683,7 +683,7 @@
                             verseNumber: 7,
                             lines: [
                                 {
-                                    kannada: "ಅವನೀತನಯಾ ಕಮನೀಯಕರಂ",
+                                    kannada: "ಅವನೀ-ತನಯಾ ಕಮನೀಯ-ಕರಂ",
                                     transliteration: "avanītanayā kamanīyakaraṃ",
                                     words: [
                                         {
@@ -699,7 +699,7 @@
                                     ]
                                 },
                                 {
-                                    kannada: "ರಜನೀಕರಚಾರುಮುಖಾಂಬುರುಹಮ್ |",
+                                    kannada: "ರಜನೀಕರ-ಚಾರು-ಮುಖಾಂಬುರುಹಮ್ |",
                                     transliteration: "rajanīkara chāru mukhāmburuham |",
                                     words: [
                                         {
@@ -720,7 +720,7 @@
                                     ]
                                 },
                                 {
-                                    kannada: "ರಜನೀಚರರಾಜತಮೋಮಿಹಿರಂ",
+                                    kannada: "ರಜನೀಚರ-ರಾಜತ-ಮೋಮಿ-ಹಿರಂ",
                                     transliteration: "rajanīchara rājata mōmi hiraṃ",
                                     words: [
                                         {
@@ -741,7 +741,7 @@
                                     ]
                                 },
                                 {
-                                    kannada: "ಮಹನೀಯಮಹಂ ರಘುರಾಮಮಯೇ || ೭ ||",
+                                    kannada: "ಮಹನೀಯ-ಮಹಂ ರಘುರಾಮಮಯೇ || ೭ ||",
                                     transliteration: "mahanīya mahaṃ raghurāmamayē || 7 ||",
                                     words: [
                                         {
@@ -794,7 +794,7 @@
                                     ]
                                 },
                                 {
-                                    kannada: "ಸ್ವನುಜಂ ಚ ಸುಕಾಯಮಮೋಘಶರಮ್ |",
+                                    kannada: "ಸ್ವನುಜಂ ಚ ಸುಕಾಯಮ-ಮೋಘಶರಮ್ |",
                                     transliteration: "svanujaṃ cha sukāyama mōghaśaram |",
                                     words: [
                                         {
@@ -836,7 +836,7 @@
                                     ]
                                 },
                                 {
-                                    kannada: "ನ ಕಥಂಚನ ಕಂಚನ ಜಾತು ಭಜೇ || ೮ ||",
+                                    kannada: "ನ ಕಥಂಚನ ಕಂಚನ ಜಾತು-ಭಜೇ || ೮ ||",
                                     transliteration: "na kathañchana kañcana jātubhajē || 8 ||",
                                     words: [
                                         {
@@ -953,7 +953,7 @@
                             verseNumber: 10,
                             lines: [
                                 {
-                                    kannada: "ಅಹಂ ದೂರತಸ್ತೇ ಪದಾಂಭೋಜಯುಗ್ಮ-",
+                                    kannada: "ಅಹಂ ದೂರತಸ್ತೇ ಪದಾಂ ಭೋಜಯುಗ್ಮ-",
                                     transliteration: "ahaṃ dūratastē padāṃ bhoja-yugma-",
                                     words: [
                                         {
@@ -995,7 +995,7 @@
                                     ]
                                 },
                                 {
-                                    kannada: "ಸಕೃತ್ಸೇವಯಾ ನಿತ್ಯಸೇವಾಫಲಂ ತ್ವಂ",
+                                    kannada: "ಸಕೃತ್ಸೇವಯಾ ನಿತ್ಯ ಸೇವಾಫಲಂ ತ್ವಂ",
                                     transliteration: "sakṛtsēvayā nitya sēvā-phalaṃ tvaṃ",
                                     words: [
                                         {
@@ -1043,7 +1043,7 @@
                             verseNumber: 11,
                             lines: [
                                 {
-                                    kannada: "ಅಜ್ಞಾನಿನಾ ಮಯಾ ದೋಷಾನಶೇಷಾನ್ವಿಹಿತಾನ್ ಹರೇ |",
+                                    kannada: "ಅಜ್ಞಾನಿನಾ ಮಯಾ ದೋಷಾ-ನ-ಶೇಷಾನ್ವಿಹಿತಾನ್ ಹರೇ |",
                                     transliteration: "ajñāninā mayā dōṣāna śēṣānvihitān harē |",
                                     words: [
                                         {
@@ -1069,7 +1069,7 @@
                                     ]
                                 },
                                 {
-                                    kannada: "ಕ್ಷಮಸ್ವ ತ್ವಂ ಕ್ಷಮಸ್ವ ತ್ವಂ ಶೇಷಶೈಲಶಿಖಾಮಣೇ || ೧೧ ||",
+                                    kannada: "ಕ್ಷಮಸ್ವ ತ್ವಂ ಕ್ಷಮಸ್ವ ತ್ವಂ ಶೇಷಶೈಲ-ಶಿಖಾಮಣೇ || ೧೧ ||",
                                     transliteration: "kṣamasva tvaṃ kṣamasva tvaṃ śēṣaśaila śikhāmaṇē || 11 ||",
                                     words: [
                                         {
@@ -1130,6 +1130,15 @@
 
     <!-- Centralized Scripts -->
     <script src="../scripts/common.js"></script>
+
+    <h2>References:</h2>
+    <ul>
+        <li>
+            <a href="https://youtu.be/A_Se3iYm4Fg?si=NzJgj7mVId9brRKo">
+                Venkateswara Stotram - Meaning (English) - YouTube
+            </a>
+        </li>
+    </ul>
 </body>
 
 </html>
