--- a/stotram/venkateswara-stotram.html
+++ b/stotram/venkateswara-stotram.html
@@ -184,7 +184,7 @@
                                     ]
                                 },
                                 {
-                                    kannada: "ಶರಣಾಗ-ತವತ್ಸಲ ಸಾರನಿಧೇ",
+                                    kannada: "ಶರಣಾಗತ-ವತ್ಸಲ ಸಾರನಿಧೇ",
                                     transliteration: "śaraṇāgata vatsala sāra nidhē",
                                     words: [
                                         {
@@ -374,7 +374,7 @@
                                     ]
                                 },
                                 {
-                                    kannada: "-ರ್ಜನತಾಭಿ-ಮತಾಧಿಕ-ದಾನರತಾತ್ |",
+                                    kannada: "-ರ್ಜನತಾಭಿ-ಮತಾಧಿಕ-ದಾನ-ರತಾತ್ |",
                                     transliteration: "-r janatābhimata adhika dāna ratāt |",
                                     words: [
                                         {
