--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <ol>
                     <li><a href="puja/ganapati-puja.html">Ganapati Puja</a></li>
                     <li><a href="stotram/ganpati-sankata-nashana-stotram.html">Sankata Nashana Stotram</a></li>
+                    <li><a href="puja/ganesha-chathurthi.html">Ganesha Chaturthi</a></li>
                 </ol>
             </div>
 
