--- a/puja/ganesha-chathurthi.html
+++ b/puja/ganesha-chathurthi.html
@@ -14,9 +14,62 @@
 <body>
     <h1>ಸಂಕಷ್ಟಹರ ಚತುರ್ಥಿ ಪೂಜ (Ganapati Puja)</h1>
 
-    <h2>CAUTION: In the UK, Ganesha Chaturthi is celebrated one day earlier than in India !!!</span></h2>
+    <h2>CAUTION: In the UK, Ganesha Chaturthi is celebrated one day earlier than in India !!!</span>
+    See <a href="https://www.drikpanchang.com/festivals/ganesh-chaturthi/ganesh-chaturthi-date-time.html" target="_blank" rel="noopener noreferrer">Drik Panchang</a> for more information.</h2>
 
     <button class="toggle-btn" onclick="toggleVisibility()">Show/Hide English Transliteration</button>
+
+    <table>
+        <thead>
+            <tr>
+                <th>Normally available</th>
+                <th>Need preparation</th>
+                <th>Purchase</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>2 Aachamana patras, water &amp; spoon</td>
+                <td>Clay ganapathi idol</td>
+                <td>Flowers</td>
+            </tr>
+            <tr>
+                <td>2 lamps, wick &amp; oil</td>
+                <td>11 grass bundles</td>
+                <td>Coconut</td>
+            </tr>
+            <tr>
+                <td>Chandan in pot</td>
+                <td>Turmeric ganapathi</td>
+                <td>Tambulam</td>
+            </tr>
+            <tr>
+                <td>KumKum in pot</td>
+                <td>Modakas</td>
+                <td>Fruits</td>
+            </tr>
+            <tr>
+                <td>Bell</td>
+                <td>21 green leaves</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>Agarbhati &amp; Stand</td>
+                <td>Akshatas</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>Camphor &amp; Stand</td>
+                <td>Yajnopavitham</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>Fan</td>
+                <td>2 cotton ball vastras</td>
+                <td></td>
+            </tr>
+        </tbody>
+    </table>
 
 
     <div id="shuddikarana-mantra"></div>
@@ -310,7 +363,7 @@
         2. ಗಣಾಧಿಪಾಯ ನಮಃ - ಬೃಹತೀಪತ್ರಂ ಪೂಜಯಾಮಿ <br>
         3. ಉಮಾಪುತ್ರಾಯ ನಮಃ - ಬಿಲ್ವಪತ್ರಂ ಪೂಜಯಾಮಿ <br>
         4. ಗಜಾನನಾಯ ನಮಃ - ದುರ್ವಾಯುಗ್ಮಂ ಪೂಜಯಾಮಿ <br>
-        5. ಹರಸೂನವೆಯ ನಮಃ - ದುತ್ತೂರಪತ್ರಂ ಪೂಜಯಾಮಿ <br>
+        5. ಹರಸೂನವೇ ನಮಃ - ದುತ್ತೂರಪತ್ರಂ ಪೂಜಯಾಮಿ <br>
         6. ಲಂಬೋದರಾಯ ನಮಃ - ಬದರೀಪತ್ರಂ ಪೂಜಯಾಮಿ <br>
         7. ಗುಹಾಗ್ರಜಾಯ ನಮಃ - ಅಪಾಮಾರ್ಗಪತ್ರಂ ಪೂಜಯಾಮಿ <br>
         8. ಗಜಕರ್ಣಾಯ ನಮಃ - ತುಲಸೀಪತ್ರಂ ಪೂಜಯಾಮಿ <br>
@@ -326,14 +379,14 @@
         18. ಇಭವಕ್ತ್ರಾಯ ನಮಃ - ಶಮೀಪತ್ರಂ ಪೂಜಯಾಮಿ <br>
         19. ವಿನಾಯಕಾಯ ನಮಃ - ಅಶ್ವತ್ಥಪತ್ರಂ ಪೂಜಯಾಮಿ <br>
         20. ಸುರಸೇವಿತಾಯ ನಮಃ - ಅರ್ಜುನಪತ್ರಂ ಪೂಜಯಾಮಿ <br>
-        21. ಕಪಿಲಾಯ ನಮಃ - ಅರ್ಕಪತ್ರಂ ಪೂಜಯಾಮಿ <br>
+        21. ಕಪಿಲಾಯ ನಮಃ - ಅರ್ಕಪತ್ರಂ ಪೂಜಯಾಮಿ <br><br>
         ಶ್ರೀ ಗಣೇಶ್ವರಾಯ ನಮಃ - ಏಕವಿಂಶತಿಪತ್ರಾಣಿ ಪೂಜಯಾಮಿ <br>
         <span class="ENG">
-            1. Sumukhaya Namah - Machi Patram Poojayami <br>
+            1. Sumukhaya Namah - Machi Patram Poojayami<br>
             2. Ganadhipaya Namah - Brihati Patram Poojayami <br>
             3. Umaputraya Namah - Bilva Patram Poojayami <br>
             4. Gajananaya Namah - Durva Yugmam Poojayami <br>
-            5. Harasoonave Namah - Dattura Patram Poojayami <br>
+            5. Harasūnavé Namah - Dattura Patram Poojayami <br>
             6. Lambodaraya Namah - Badari Patram Poojayami <br>
             7. Guhagrajaya Namah - Apamarga Patram Poojayami <br>
             8. Gajakarnaaya Namah - Tulasi Patram Poojayami <br>
@@ -349,7 +402,7 @@
             18. Ibhavaktraya Namah - Shami Patram Poojayami <br>
             19. Vinayakaya Namah - Ashvattha Patram Poojayami <br>
             20. Surasevitaya Namah - Arjuna Patram Poojayami <br>
-            21. Kapilaya Namah - Arka Patram Poojayami <br>
+            21. Kapilaya Namah - Arka Patram Poojayami <br><br>
             Shri Ganeshvaraya Namah - Ekavimshati Patrani Poojayami <br>
         </span>
     </p>
@@ -480,7 +533,7 @@
         ಪ್ರದಕ್ಷಿಣಂ ಕರಿಷ್ಯಾಮಿ ಸತತಂ ಮೋದಕಪ್ರಿಯ <br>
         ಶ್ರೀ ಮಹಾಗಣಾಧಿಪತಯೇ ನಮಃ ಸುವರ್ಣ ದಿವ್ಯ ಮಂತ್ರಪುಷ್ಪಂ ಸಮರ್ಪಯಾಮಿ <br>
         ಆತ್ಮ ಪ್ರದಕ್ಷಿಣ ನಮಸ್ಕಾರಾನ್ ಸಮರ್ಪಯಾಮಿ <br><br>
-        
+
         ಪುನರ್ ಅರ್ಘ್ಯಂ <br>
         ಅರ್ಘ್ಯಂ ಗೃಹಾಣ ಹೇರಂಬ ಸರ್ವ ಭದ್ರ ಪ್ರದಾಯಕ <br>
         ಗಂಧ ಪುಷ್ಪಾಕ್ಷತೈರ ಯುಕ್ತಂ ಪಾತ್ರಸ್ಥಂ ಪಾಪನಾಶನ <br>
@@ -524,7 +577,7 @@
         </span>
     </b>
 
-    <h2>ಉದ್ವಾಸನ <span class="ENG">(Udvaasana)</span></h2>
+    <h2>ಉದ್ವಾಸನ <span class="ENG">(Udvaasana / Sending-off)</span></h2>
     <p>
         ನಮಸ್ತೇ ವಿಘ್ನರಾಜಾಯ ನಮಸ್ತೇ ವಿಘ್ನನಾಶನ<br>
         ಬ್ರಾಹ್ಮಣೇಭ್ಯೋಭ್ಯಾನುಜ್ಞಾತಾ ಗಚ್ಛದೆವೆ ಯಥಾ ಸುಖಂ<br>
@@ -541,7 +594,7 @@
 
     <h1>ವ್ರತ ಕಥೆ <span class="ENG">(Vrata Katha)</span></h1>
 
-    <h2>The Story of Lord Vinayaka’s Birth and the Moon’s Curse</h2>
+    <h2>The Story of Lord Vinayaka's Birth and the Moon's Curse</h2>
 
     <p>In ages long past, the venerable sage Suta spoke to his disciples and recounted a tale most sacred — the origin
         of Lord Vinayaka, the mystery of why one must not gaze upon the Moon on Vinayaka Chaturthi, and the means by
@@ -557,37 +610,37 @@
     <p>Without hesitation, Gajasura declared, “O Mahadeva, dwell within my stomach. Let your presence be my greatest
         treasure.”</p>
 
-    <p>Such was Shiva’s compassion for his devotees that he agreed, entering the asura’s body and sealing himself
+    <p>Such was Shiva's compassion for his devotees that he agreed, entering the asura's body and sealing himself
         within.</p>
 
     <p>Far away in Kailasa, Parvati sensed the absence of her beloved. Her heart grew restless, her search frantic,
-        until she discovered the unthinkable: Shiva imprisoned in Gajasura’s belly. Fear gave way to desperation, and
+        until she discovered the unthinkable: Shiva imprisoned in Gajasura's belly. Fear gave way to desperation, and
         she turned to her brother Vishnu for help.</p>
 
     <p>“Do not weep, Sister,” Vishnu assured her. “I will bring him back.”</p>
 
-    <h2>Vishnu’s Clever Plan</h2>
-    <p>Vishnu summoned the gods — Indra, Brahma, and others — and together they devised a stratagem. Nandi, Shiva’s
+    <h2>Vishnu's Clever Plan</h2>
+    <p>Vishnu summoned the gods — Indra, Brahma, and others — and together they devised a stratagem. Nandi, Shiva's
         loyal bull, was adorned as a Gangireddu, a richly decorated dancing bull as seen in the villages of Andhra. The
         gods themselves became wandering musicians, each carrying an instrument, each ready to play their part.</p>
 
-    <p>Thus disguised, they entered Gajasura’s capital. A dazzling performance unfolded — Nandi danced with breathtaking
+    <p>Thus disguised, they entered Gajasura's capital. A dazzling performance unfolded — Nandi danced with breathtaking
         grace to divine music, captivating the city. The fame of the spectacle reached Gajasura himself, who demanded
-        the troupe’s presence in his court.</p>
+        the troupe's presence in his court.</p>
 
-    <p>There, the asura was entranced. Nandi’s dance delighted him beyond measure. “Name your boon,” Gajasura
+    <p>There, the asura was entranced. Nandi's dance delighted him beyond measure. “Name your boon,” Gajasura
         proclaimed. “It shall be yours.”</p>
 
     <p>In that moment, Vishnu shed the disguise and revealed their intent. “This bull is Nandi, vahana of Lord Shiva. We
         have come for him.”</p>
 
-    <p>The demon king’s heart sank. He recognized Vishnu — the slayer of asuras — and knew his end was near. Yet bound
+    <p>The demon king's heart sank. He recognized Vishnu — the slayer of asuras — and knew his end was near. Yet bound
         by honor, he did not resist. Instead, he turned his devotion once more to Shiva:</p>
 
     <p>“O Lord, I ask only this final boon: let my head be worshipped in all the worlds, and may you wear my skin as
         your raiment.”</p>
 
-    <p>Shiva, ever merciful, consented. At Vishnu’s command, Nandi tore open Gajasura’s stomach, and Shiva stepped
+    <p>Shiva, ever merciful, consented. At Vishnu's command, Nandi tore open Gajasura's stomach, and Shiva stepped
         forth, freed at last.</p>
 
     <p>Vishnu, with gentle firmness, advised, “Boons must be granted with caution, lest demons twist them into
@@ -595,7 +648,7 @@
         with the gods to Kailasa.</p>
 
     <h2>The Birth of Ganesha</h2>
-    <p>At Kailasa, Parvati’s joy knew no bounds. To celebrate her husband’s return, she prepared for a sacred abhyangana
+    <p>At Kailasa, Parvati's joy knew no bounds. To celebrate her husband's return, she prepared for a sacred abhyangana
         snana, an anointing bath. She rubbed oil over her skin, cleansing herself with a soft paste of flour known as
         nalugu. When she washed it away, she gathered the fragrant mixture, and from it, shaped the form of a radiant
         young boy. With her divine breath, she gave him life.</p>
@@ -610,7 +663,7 @@
 
     <p>“No one may pass,” he declared.</p>
 
-    <p>Shiva’s brow furrowed. Anger flared. Unaware that the boy was Parvati’s creation, he raised his weapon and, in a
+    <p>Shiva's brow furrowed. Anger flared. Unaware that the boy was Parvati's creation, he raised his weapon and, in a
         single act of wrath, struck him down — severing his head and burning it to ashes. Without another thought, Shiva
         walked inside.</p>
 
@@ -623,9 +676,9 @@
         were dispatched with orders: find the head of the first creature lying with its face turned north.</p>
 
     <p>They searched the worlds, yet only Gajasura, in his final repose, lay with his head to the north. They brought
-        back the elephant’s head.</p>
+        back the elephant's head.</p>
 
-    <p>Thus, Shiva placed it upon the lifeless body, breathed life anew, and Parvati’s son rose again — transformed.</p>
+    <p>Thus, Shiva placed it upon the lifeless body, breathed life anew, and Parvati's son rose again — transformed.</p>
 
     <p>This was Gajanana, the elephant-headed god. To honor him, Shiva bestowed a unique vahana — a humble rat,
         Anindyudu — and proclaimed him Vinayaka, Ganapati, remover of obstacles and bestower of blessings.</p>
@@ -652,22 +705,22 @@
     <p>Shiva smiled. “My son, to circumambulate your parents with devotion while chanting the Narayana Mantra is equal
         to bathing in all sacred rivers.”</p>
 
-    <p>Ganesha’s heart leapt. He bowed, chanted, and walked in reverence around Shiva and Parvati. By the power of this
+    <p>Ganesha's heart leapt. He bowed, chanted, and walked in reverence around Shiva and Parvati. By the power of this
         act, everywhere Kumaraswamy bathed, he found Ganesha had already been there before him.</p>
 
-    <p>At last, humbled, Kumaraswamy returned. “Father,” he said softly, “I see now my brother’s greatness. Appoint him
+    <p>At last, humbled, Kumaraswamy returned. “Father,” he said softly, “I see now my brother's greatness. Appoint him
         as Vighneshwara.”</p>
 
     <p>Thus, on Bhadrapada Shukla Chaturthi, Ganesha was crowned the Lord of Obstacles. From that day, the festival of
         Vinayaka Chaturthi was celebrated with devotion.</p>
 
-    <h2>The Moon’s Mockery and the Curse</h2>
+    <h2>The Moon's Mockery and the Curse</h2>
     <p>When the feasting ended, Ganesha bent to offer sashtanga namaskaram — full prostration before his parents. Yet
         his great belly, heavy with sweets, made him falter comically — legs rising as hands fell, hands rising as legs
         fell.</p>
 
     <p>The Moon, perched in the heavens, beheld the sight and burst into laughter. His mocking gaze, sharp and cruel,
-        cast an evil drishti. In an instant, Ganesha’s stomach split, and he fell lifeless.</p>
+        cast an evil drishti. In an instant, Ganesha's stomach split, and he fell lifeless.</p>
 
     <p>Parvati, aghast, cursed the Moon:</p>
 
@@ -682,7 +735,7 @@
     <h2>The Tale of the Syamantaka Mani</h2>
     <p>In Dwapara Yuga, on such a Chaturthi, Sage Narada visited Krishna in Dwaraka and told him of the curse. Krishna
         spread the word, careful not to see the Moon. Yet fate played its part — as he milked a cow, he glimpsed the
-        Moon’s reflection in the vessel.</p>
+        Moon's reflection in the vessel.</p>
 
     <p>Knowing what must follow, he steeled himself.</p>
 
@@ -695,9 +748,9 @@
 
     <p>When Prasena never returned, Satrajit accused Krishna of murder and theft — the curse had found its mark.</p>
 
-    <p>To prove his innocence, Krishna traced the truth: Prasena’s corpse, the lion’s tracks, the bear’s cave. There,
+    <p>To prove his innocence, Krishna traced the truth: Prasena's corpse, the lion's tracks, the bear's cave. There,
         the bear-king Jambavantha attacked, and for twenty-eight days they fought with earth-shaking fury. At last,
-        Jambavantha recognized Krishna as Rama incarnate, his master from Treta Yuga. He fell at Krishna’s feet,
+        Jambavantha recognized Krishna as Rama incarnate, his master from Treta Yuga. He fell at Krishna's feet,
         offering both the jewel and his daughter Jambavati in marriage.</p>
 
     <p>Krishna accepted her hand, returned the gem, and cleared his name. Ashamed, Satrajit begged forgiveness, giving
@@ -709,7 +762,7 @@
         we see the Moon on Vinayaka Chaturthi, how shall we be spared?”</p>
 
     <p>Krishna, ever merciful, granted: “He who performs Ganesh Puja on this day, listens with devotion to the story of
-        Ganesha’s birth and of the Syamantaka Mani, and finally places akshintalu — grains of rice mixed with turmeric —
+        Ganesha's birth and of the Syamantaka Mani, and finally places akshintalu — grains of rice mixed with turmeric —
         upon his head, shall be freed from the curse, even if he sees the Moon.”</p>
 
     <p>And so, even today, the faithful recite this sacred story on Vinayaka Chaturthi, remembering the birth of
