Update project files

--- a/stotram/daily-mantras.html
+++ b/stotram/daily-mantras.html
@@ -18,51 +18,40 @@
 
     <h2>ಪ್ರಭಾತ ಶ್ಲೋಕಃ <span class="ENG">(Prabhaata Sloka)</span></h2>
 
-    Today, let my actions bring prosperity (Lakshmi), wisdom (Saraswati), and be in line with dharma (Govinda). Before
-    looking at the world, look at yourself — your hands, your power to act. Realize that God acts through you. Use this
-    day well.
+    Today, may my actions invite Lakshmi's prosperity, Saraswati's wisdom, and align with Govinda's dharma. Before
+    facing the world, I honour the divine power in my hands — God acts through me. Let this day be purposeful and
+    sacred.
 
     <p>
-        ಕರಾಗ್ರೇ ವಸತೇ ಲಕ್ಷ್ಮೀಃ <br>
-        <span class="ENG">kara agre vasate lakshmi <br>
+        ಕರಾಗ್ರೇ ವಸತೇ ಲಕ್ಷ್ಮೀಃ ಕರಮಧ್ಯೇ ಸರಸ್ವತೀ | <br>
+        <span class="ENG">kara agre vasate lakshmi, kara madhye saraswati | <br>
             Imagine golden light at your fingertips (Lakshmi: abundance) <br>
-        </span>
-        ಕರಮಧ್ಯೇ ಸರಸ್ವತೀ | <br>
-        <span class="ENG">Kara madhye saraswati | <br>
             A serene white glow in your palm (Saraswati: knowledge, purity) <br>
         </span>
-        ಕರಮೂಲೇ ತು ಗೋವಿಂದಃ <br>
-        <span class="ENG">kara muuletu govinda <br>
+        ಕರಮೂಲೇ ತು ಗೋವಿಂದಃ ಪ್ರಭಾತೇ ಕರದರ್ಶನಮ್ || <br>
+        <span class="ENG">kara muuletu govinda, prabhaatae kara darshanam || <br>
             A deep blue, strong radiance at your wrist (Govinda: strength, sustenance) <br>
-        </span>
-        ಪಪ್ರಭಾತೇ ಕರದರ್ಶನಮ್ || <br>
-        <span class="ENG">prabhaatae kara darshanam || <br>
             Then fold your hands in Namaskara with devotion and humility. <br>
         </span>
     </p>
 
     <h2>ಪ್ರಭಾತ ಭೂಮಿ ಶ್ಲೋಕಃ <span class="ENG">(Prabhaata Bhoomi Sloka)</span></h2>
     <p>
-        ಸಮುದ್ರ ವಸನೇ ದೇವೀ <br>
-        <span class="ENG">samudra vasane devee <br></span>
-        ಪರ್ವತ ಸ್ತನ ಮಂಡಲೇ | <br>
-        <span class="ENG">parvata stana mandale | <br></span>
-        ವಿಷ್ಣುಪತ್ನಿ ನಮಸ್ತುಭ್ಯಂ <br>
-        <span class="ENG">vishnu patnee namastubhyam <br></span>
-        ಪಾದಸ್ಪರ್ಶಂ ಕ್ಷಮಸ್ವಮೇ || <br>
-        <span class="ENG">paada sparsham kshama-swa-mae || <br></span>
+        ಸಮುದ್ರ-ವಸನೇ ದೇವೀ ಪರ್ವತ-ಸ್ತನ-ಮಂಡಲೇ | <br>
+        <span class="ENG">samudra vasane devee, parvata stana mandale | <br></span>
+        ವಿಷ್ಣುಪತ್ನಿ ನಮಸ್ತುಭ್ಯಂ ಪಾದಸ್ಪರ್ಶಂ ಕ್ಷಮಸ್ವಮೆ || <br>
+        <span class="ENG">vishnu patnee namastubhyam, paada sparsham kshama-swa-mae || <br></span>
     </p>
 
     <h2>ಸ್ನಾನ ಶ್ಲೋಕಃ <span class="ENG">(Snaana Sloka)</span></h2>
     <p>
-        ಗಂಗೇ ಚ ಯಮುನೇ ಚೈವ <br>
-        <span class="ENG">gangae cha yamunae chaiva <br></span>
-        ಗೋದಾವರಿ ಸರಸ್ವತಿ | <br>
-        <span class="ENG">godavari saraswati | <br></span>
-        ನರ್ಮದೇ ಸಿಂಧು ಕಾವೇರಿ <br>
-        <span class="ENG">narmadae sindhu kaveri <br></span>
-        ಜಲೇಸ್ಮಿನ್ ಸನ್ನಿಧಿಂ ಕುರು || <br>
-        <span class="ENG">jalaesmin sannidhim kuru || <br></span>
+        ಗಂಗೇ ಚ ಯಮುನೇ ಚೈವ ಗೋದಾವರಿ ಸರಸ್ವತಿ |<br>
+        <span class="ENG">gangae cha yamunae chaiva, godavari saraswati |<br></span>
+        ನರ್ಮದೇ ಸಿಂಧು ಕಾವೇರಿ ಜಲೇಸ್ಮಿನ್ ಸನ್ನಿಧಿಂ ಕುರು ||<br>
+        <span class="ENG">narmadae sindhu kaveri, jalae'smin sannidhim kuru ||<br>
+            Ganga, Yamuna, Godavari, Saraswathi, Narmada, Sindhu, Kaveri, May all these have a holy confluence in this
+            water. <br>
+        </span>
     </p>
 
     <!-- Centralized Scripts -->
