--- a/stotram/venkateswara-stotram.html
+++ b/stotram/venkateswara-stotram.html
@@ -405,7 +405,7 @@
                                     ]
                                 },
                                 {
-                                    kannada: "ಪರದೇವತಯಾ ಗದಿತಾನ್ ನಿಗಮೈಃ (ಗದಿತಾನ್ನಿಗಮೈಃ)",
+                                    kannada: "ಪರದೇವತಯಾ ಗದಿತಾನ್ನಿಗಮೈಃ",
                                     transliteration: "para dēvatayā gaditān nigamaiḥ",
                                     words: [
                                         {
@@ -431,7 +431,7 @@
                                     ]
                                 },
                                 {
-                                    kannada: "ಕಮಲಾ-ದಯಿತಾನ್ ನ ಪರಂ ಕಲಯೇ (ಕಮಲಾದಯಿತಾನ್ನ) || ೪ ||",
+                                    kannada: "ಕಮಲಾದಯಿತಾನ್ನ ನ ಪರಂ ಕಲಯೇ || ೪ ||",
                                     transliteration: "kamalā-dayitān na paraṃ kalayē || 4 ||",
                                     words: [
                                         {
@@ -820,7 +820,7 @@
                                     ]
                                 },
                                 {
-                                    kannada: "ಅಪಹಾಯ ರಘೂದ್ವಾಹ ಮನ್ಯಮಹಂ",
+                                    kannada: "ಅಪಹಾಯ ರಘೂದ್ವಹ ಮನ್ಯಮಹಂ",
                                     transliteration: "apahāya raghūdvāha manyamahaṃ",
                                     words: [
                                         {
@@ -829,8 +829,8 @@
                                             meaning: "abandoning, leaving aside"
                                         },
                                         {
-                                            kannada: "ರಘೂದ್ವಾಹ",
-                                            transliteration: "raghūdvāha",
+                                            kannada: "ರಘೂದ್ವಹ",
+                                            transliteration: "raghūdvaha",
                                             meaning: "the bearer of the Raghu lineage"
                                         },
                                         {
