--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                     <li><a href="puja/venkateswara-puja.html">Venkateswara Puja</a></li>
                     <li><a href="stotram/venkateswara-vajra-kavacham.html">Venkateswara vajra kavacham</a></li>
                     <li><a href="stotram/garuda-gamana-stotram.html">Garuda Gamana Stotram</a></li>
+                    <li><a href="stotram/venkateswara-stotram.html">Venkateswara Stotram</a></li>
                     <li><a href="stotram/vishnu-sahasranamam.html">Vishnu Sahasranamam (in progress)</a></li>
-                    <li><a href="stotram/venkateswara-stotram.html">Venkateswara Stotram (in progress)</a></li>
                 </ol>
             </div>
 
