--- a/stotram/kanakadhara-stotram.html
+++ b/stotram/kanakadhara-stotram.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="kn">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ಕನಕಧಾರ ಸ್ತೋತ್ರಂ (Kanakadhara Stotram)</title>
     <link rel="icon" type="image/x-icon" href="../favicon.ico">
-    
+
     <!-- Centralized Styles -->
     <link rel="stylesheet" href="../styles/common.css">
 </head>
@@ -14,215 +15,370 @@
 
     <h1>ಕನಕಧಾರ ಸ್ತೋತ್ರಂ <span class="ENG">(Kanakadhara Stotram)</span></h1>
 
-    <button onclick="toggleVisibility()">Show/Hide English Transliteration</button>
+    <button onclick="toggleVisibility()">Show/Hide English Transliteration</button><br>
+
+    Sequence recommended by Nanduri Sambasiva Rao.<br>
 
     <h3>ಸಂಕಲ್ಪಮ್ (Sankalpam)</h3>
 
-    कमले कमलाक्षवल्लभे त्वं
-    करुणापूरतरङ्गितैरपाङ्गैः ।
-    अवलोकय मामकिञ्चनानां
-    प्रथमं पात्रमकृत्रिमं दयायाः ॥
+    <p>
+        ಕಮಲೇ ಕಮಲಾಕ್ಷವಲ್ಲಭೆ ತ್ವಂ <br>
+        ಕರುಣಾಪೂರ-ತರಂಗೀತೈರಪಂಗೈಃ । <br>
+        ಅವಲೋಕಯ ಮಾಮಕಿಂಚನಾನಾಂ <br>
+        ಪ್ರಥಮಂ ಪಾತ್ರಂ ಅಕೃತ್ರಿಮಂ ದಯಾಯಾಃ ॥ <br>
 
-    ಕಮಲೇ ಕಮಲಾಕ್ಷವಲ್ಲಭೆ ತ್ವಂ
-    ಕರುಣಾಪೂರ-ತರಂಗೀತೈರಪಂಗೈಃ ।
-    ಅವಲೋಕಯ ಮಾಮಕಿಂಚನಾನಾಂ
-    ಪ್ರಥಮಂ ಪಾತ್ರಂ ಅಕೃತ್ರಿಮಂ ದಯಾಯಾಃ ॥
+        <span class="ENG">
+            kamale kamalaaksha vallabe tvam <br>
+            karunaapoora tarangee triar apangaih | <br>
+            avalookaya maam akinchanaanaam <br>
+            prathamam paathram akritrimam dayaayaah || <br>
+        </span>
 
-    kamale kamalaaksha vallabe tvam
-    karunaapoora tarangee triar apangaih |
-    avalookaya maam akinchanaanaam
-    prathamam paathram akritrimam dayaayaah ||
+        <!-- कमले कमलाक्षवल्लभे त्वं <br>
+        करुणापूरतरङ्गितैरपाङ्गैः । <br>
+        अवलोकय मामकिञ्चनानां <br>
+        प्रथमं पात्रमकृत्रिमं दयायाः ॥ <br> -->
+    </p>
 
-    कमलासन पाणिना ललाटे ।
-    लिखितामक्षर पङ्क्तिमस्य जन्तोः॥
-    परिमार्जय मातरङ्घ्रिणा ते ।
-    धनिकद्वारनिवासदुःखदोग्ध्रीम्॥ २१॥
+    <p>
+        ಕಮಲಾಸನ ಪಾಣಿನಾ ಲಲಾಟೆ | <br>
+        ಲಿಖಿತಾಮಕ್ಷರ ಪಂಕ್ತಿಮ್ ಅಸ್ಯ ಜಂತೋಃ || <br>
+        ಪರಿಮಾರ್ಜಯ ಮಾತ: ಅಂಗ್ರಿಣಾತೆ | <br>
+        ಧನಿಕದ್ವಾರ ನಿವಾಸ ದುಃಖದೋಗ್ಧ್ರೀಂ || <br>
 
-    ಕಮಲಾಸನ ಪಾಣಿನಾ ಲಲಾಟೆ |
-    ಲಿಖಿತಾಮಕ್ಷರ ಪಂಕ್ತಿಮ್ ಅಸ್ಯ ಜಂತೋಃ ||
-    ಪರಿಮಾರ್ಜಯ ಮಾತ: ಅಂಗ್ರಿಣಾತೆ |
-    ಧನಿಕದ್ವಾರ ನಿವಾಸ ದುಃಖದೋಗ್ಧ್ರೀಂ ||
+        <span class="ENG">
+            kamalaasana paaNinaa lalaaTae <br>
+            likhitaaM akshara paMktiM asya jaMtO: <br>
+            parimaarjaya maata: aMghriNaatae <br>
+            dhanikadvaara nivaasa du:khadOg-dhreeM <br>
+        </span>
 
-    kamalaasana paaNinaa lalaaTae
-    likhitaaM akshara paMktiM asya jaMtO:
-    parimaarjaya maata: aMghriNaatae
-    dhanikadvaara nivaasa du:khadOg-dhreeM
-
-    https://youtu.be/LXyr_0BswXA?si=GPj4tqakJ2c2i-49
-    https://vignanam.org/kannada/kanaka-dhaara-stotram.html
-    https://sanskritdocuments.org/doc_devii/kanaka.html
-    https://www.facebook.com/syllabsim/posts/complete-stotra-श्री-श्री-कनकधारा-स्तवः-ॐ-अस्य-श्री-कनकधारा-यन्त्र-मन्त्रस्य-श्र/412068165585451/?locale=hi_IN
-    https://drive.google.com/file/d/1AWCwmi7mpQCfR4R1CpoOcyluL6jX51em/view
-    https://drive.google.com/file/d/1edGEUu0x2Sf4Ldyt4f1A8k4ZcujwM4tf/view
+        <!-- कमलासन पाणिना ललाटे । <br>
+        लिखितामक्षर पङ्क्तिमस्य जन्तोः॥ <br>
+        परिमार्जय मातरङ्घ्रिणा ते । <br>
+        धनिकद्वारनिवासदुःखदोग्ध्रीम्॥ २१॥ <br> -->
+    </p>
 
     <h3>ಗಣಪತಿ ಪ್ರಾರ್ಥನ (Ganapati Prarthana)</h3>
+    <p>
+        ವಂದೇ ವಂದಾರು ಮಂದಾರಮಿಂದಿರಾನಂದ ಕಂದಲಂ <br>
+        ಅಮಂದಾನಂದ ಸಂದೋಹ ಬಂಧುರಂ ಸಿಂಧುರಾನನಂ <br>
 
-    वन्दे वन्दारु मन्दारमिन्दिरानन्द कन्दलं
-    अमन्दानन्द सन्दोह बन्धुरं सिन्धुराननम्
+        <span class="ENG">
+            vande vandāru mandāram indirā-ānanda kandhalam <br>
+            amanda-ānanda sandoha bandhuram sindhura-ānanam <br>
 
-    ವಂದೇ ವಂದಾರು ಮಂದಾರಮಿಂದಿರಾನಂದ ಕಂದಲಂ
-    ಅಮಂದಾನಂದ ಸಂದೋಹ ಬಂಧುರಂ ಸಿಂಧುರಾನನಂ
+            I bow to -- devotees -- celestial tree -- Joy of Indira (Lakshmi) -- source of happiness <br>
+            Immense bliss -- mass/collection -- beautiful -- one with vermilion face (Ganesha) <br>
 
-    vande vandāru mandāram indirā-ānanda kandhalam
-    amanda-ānanda sandoha bandhuram sindhura-ānanam
+            I bow to Lord Ganesha, whose face shines like vermilion, <br>
+            who is like the heavenly Mandāra tree to His devotees, <br>
+            the very source of joy for Goddess Lakshmi herself, <br>
+            and who is adorned with an abundance of immense bliss and beauty. <br>
+        </span>
 
-    I bow to -- devotees -- celestial tree -- Joy of Indira (Lakshmi) -- source of happiness
-    Immense bliss -- mass/collection -- beautiful -- one with vermilion face (Ganesha)
-
-    I bow to Lord Ganesha, whose face shines like vermilion,
-    who is like the heavenly Mandāra tree to His devotees,
-    the very source of joy for Goddess Lakshmi herself,
-    and who is adorned with an abundance of immense bliss and beauty.
+        <!-- वन्दे वन्दारु मन्दारमिन्दिरानन्द कन्दलं <br>
+        अमन्दानन्द सन्दोह बन्धुरं सिन्धुराननम् <br> -->
+    </p>
 
     <h3>ಧ್ಯಾನ ಶ್ಲೋಕ (Dhyana Shloka)</h3>
 
-    ದಿಗ್ಘಸ್ತಿಭಿಃ ಕನಕ-ಕುಂಭಮುಖಾವಸೃಷ್ಟ
-    ಸ್ವರ್ವಾಹಿನೀ ವಿಮಲಚಾರು-ಜಲಾಪ್ಲುತಾಂಗೀಮ್ ।
-    ಪ್ರಾತರ್ನಮಾಮಿ ಜಗತಾಂ ಜನನೀಮಶೇಷ 
-    ಲೋಕಧಿನಾಥ-ಗೃಹಣೀಮಮೃತಾಬ್ಧಿಪುತ್ರೀಮ್ 
+    <p>
+        ದಿಗ್ಘಸ್ತಿಭಿಃ ಕನಕ-ಕುಂಭಮುಖಾವಸೃಷ್ಟ <br>
+        ಸ್ವರ್ವಾಹಿನೀ ವಿಮಲಚಾರು-ಜಲಾಪ್ಲುತಾಂಗೀಮ್ । <br>
+        ಪ್ರಾತರ್ನಮಾಮಿ ಜಗತಾಂ ಜನನೀಮಶೇಷ <br>
+        ಲೋಕಧಿನಾಥ-ಗೃಹಣೀಮಮೃತಾಬ್ಧಿಪುತ್ರೀಮ್ <br>
 
-    digghastibhi: kanaka-kuMbha-mukhaavasRshTa
-    svarvaahinee vimalachaaru-jalaaplutaaMgeeM
-    praatarnamaami jagataaM jananeeM-aSaesha
-    lOkaadhinaatha gRhiNeeM-amRtaabdhi-putreeM
+        <span class="ENG">
+            digghastibhi: kanaka-kuMbha-mukhaavasRshTa <br>
+            svarvaahinee vimalachaaru-jalaaplutaaMgeeM <br>
+            praatarnamaami jagataaM jananeeM-aSaesha <br>
+            lOkaadhinaatha gRhiNeeM-amRtaabdhi-putreeM <br>
+        </span>
 
-    दिग्घस्तिभिः कनककुम्भमुखावसृष्ट
-    स्वर्वाहिनी विमलचारुजलाप्लुताङ्गीम् ।
-    प्रातर्नमामि जगतां जननीमशेष
-    लोकधिनाथ गृहिणीममृताब्धिपुत्रीं ॥ 19 ॥
+        <!-- दिग्घस्तिभिः कनककुम्भमुखावसृष्ट <br>
+        स्वर्वाहिनी विमलचारुजलाप्लुताङ्गीम् । <br>
+        प्रातर्नमामि जगतां जननीमशेष <br>
+        लोकधिनाथ गृहिणीममृताब्धिपुत्रीं ॥ <br> -->
+    </p>
 
     <h3>ಕನಕಧಾರಾ ಸ್ತೋತ್ರ (Kanakadhara Stotra)</h3>
 
-    ಅಂಗಂ ಹರೇಃ ಪುಲಕಭೂಷಣಮಾಶ್ರಯಂತೀ
-    ಭೃಂಗಾಂಗನೇವ ಮುಕುಳಾಭರಣಂ ತಮಾಲಂ ।
-    ಅಂಗೀಕೃತಾಖಿಲ ವಿಭೂತಿ-ರಪಾಂಗಲೀಲಾ
-    ಮಾಂಗಲ್ಯದಾಸ್ತು ಮಮ ಮಂಗಳದೇವತಾಯಾಃ ॥ 1 ॥
+    <p>
+        ಅಂಗಂ ಹರೇಃ ಪುಲಕಭೂಷಣಮಾಶ್ರಯಂತೀ <br>
+        ಭೃಂಗಾಂಗನೇವ ಮುಕುಳಾಭರಣಂ ತಮಾಲಂ । <br>
+        ಅಂಗೀಕೃತಾಖಿಲ ವಿಭೂತಿ-ರಪಾಂಗಲೀಲಾ <br>
+        ಮಾಂಗಲ್ಯದಾಸ್ತು ಮಮ ಮಂಗಳದೇವತಾಯಾಃ ॥ 1 ॥ <br>
 
-    अङ्गं हरेः पुलकभूषणमाश्रयन्ती
-    भृङ्गाङ्गनेव मुकुलाभरणं तमालम् ।
-    अङ्गीकृताखिलविभूतिरपाङ्गलीला
-    माङ्गल्यदाऽस्तु मम मङ्गलदेवतायाः ॥ १ ॥
+        <span class="ENG">
+            aMgaM harēh pulakabhūṣaṇamāśrayantī <br>
+            bhṛṅgāṅganēva mukuḻābharaṇaṃ tamālam । <br>
+            aMgaīkṛtākhila-vibhūtirapāṅgalīlā <br>
+            māṅgalyadāstu mama maṅgaḻadēvatāyāḥ ॥ 1 ॥
+        </span>
 
-    aṅgaṃ harēḥ pulakabhūṣaṇamāśrayantī
-    bhṛṅgāṅganēva mukuḻābharaṇaṃ tamālam ।
-    aṅgīkṛtākhila-vibhūtirapāṅgalīlā
-    māṅgalyadāstu mama maṅgaḻadēvatāyāḥ ॥ 1 ॥
+        <!-- अङ्गं हरेः पुलकभूषणमाश्रयन्ती <br>
+        भृङ्गाङ्गनेव मुकुलाभरणं तमालम् । <br>
+        अङ्गीकृताखिलविभूतिरपाङ्गलीला <br>
+        माङ्गल्यदाऽस्तु मम मङ्गलदेवतायाः ॥ १ ॥ <br> -->
+    </p>
 
-    ಮುಗ್ಧಾ ಮುಹುರ್ವಿದಧತೀ ವದನೇ ಮುರಾರೇಃ
-    ಪ್ರೇಮತ್ರಪಾಪ್ರಣಿಹಿತಾನಿ ಗತಾಗತಾನಿ ।
-    ಮಾಲಾ ದೃಶೋರ್ಮಧುಕರೀವ ಮಹೋತ್ಪಲೇ ಯಾ
-    ಸಾ ಮೇ ಶ್ರಿಯಂ ದಿಶತು ಸಾಗರ ಸಂಭವಾ ಯಾಃ ॥ 2 ॥
+    <p>
+        ಮುಗ್ಧಾ ಮುಹುರ್ವಿದಧತೀ ವದನೇ ಮುರಾರೇಃ <br>
+        ಪ್ರೇಮತ್ರಪಾಪ್ರಣಿಹಿತಾನಿ ಗತಾಗತಾನಿ । <br>
+        ಮಾಲಾ ದೃಶೋರ್ಮಧುಕರೀವ ಮಹೋತ್ಪಲೇ ಯಾ <br>
+        ಸಾ ಮೇ ಶ್ರಿಯಂ ದಿಶತು ಸಾಗರ ಸಂಭವಾ ಯಾಃ ॥ 2 ॥ <br>
 
-    mugdhaa muhurvidadhatee vadanae muraarae:
-    praematrapaa praNihitaani gataagataani
-    maalaa dRSOr madhukareeva mahOtpalaeyaa
-    saa mae SriyaM diSatu saagara saMbhavaayaa:
+        <span class="ENG">
+            mugdhaa muhurvidadhatee vadanae muraarae: <br>
+            praematrapaa praNihitaani gataagataani <br>
+            maalaa dRSOr madhukareeva mahOtpalaeyaa <br>
+            saa mae SriyaM diSatu saagara saMbhavaayaa: <br>
+        </span>
 
-    मुग्धा मुहुर्विदधती वदने मुरारेः
-    प्रेमत्रपाप्रणिहितानि गतागतानि ।
-    मालादृशोर्मधुकरीव महोत्पले या
-    सा मे श्रियं दिशतु सागर सम्भवा याः ॥ 2 ॥
+        <!-- मुग्धा मुहुर्विदधती वदने मुरारेः <br>
+        प्रेमत्रपाप्रणिहितानि गतागतानि । <br>
+        मालादृशोर्मधुकरीव महोत्पले या <br>
+        सा मे श्रियं दिशतु सागर सम्भवा याः ॥ 2 ॥ <br> -->
+    </p>
 
-    ವಿಶ್ವಾಮರೇಂದ್ರ-ಪದವಿಭ್ರಮ-ದಾನ-ದಕ್ಷಂ
-    ಆನಂದಹೇತು-ರಧಿಕಂ ಮುರವಿದ್ವಿಷೋಽಪಿ |
-    ಈಷನ್ನಿಷೀದತು ಮಯಿ ಕ್ಷಣಮೀಕ್ಷಣಾರ್ಥಂ
-    ಇಂದೀವರೋದರ-ಸಹೋದರಮಿಂದಿರಾ-ಯಾಃ ||
+    <p>
+        ವಿಶ್ವಾಮರೇಂದ್ರ-ಪದವಿಭ್ರಮ-ದಾನ-ದಕ್ಷಂ <br>
+        ಆನಂದಹೇತು-ರಧಿಕಂ ಮುರವಿದ್ವಿಷೋಽಪಿ | <br>
+        ಈಷನ್ನಿಷೀದತು ಮಯಿ ಕ್ಷಣಮೀಕ್ಷಣಾರ್ಥಂ <br>
+        ಇಂದೀವರೋದರ-ಸಹೋದರಮಿಂದಿರಾ-ಯಾಃ || <br>
 
-    विश्वामरेन्द्रपदविभ्रमदानदक्षं
-    आनन्दहेतुरधिकं मुरविद्विषोऽपि ।
-    ईषन्निषीदतु मयि क्षणमीक्षणार्धम्
-    इन्दीवरोदरसहोदरमिन्दिरायाः ॥
+        <span class="ENG">
+            viSvaamaraeMdra-padavibhrama-daana-dakshaM <br>
+            aanaMdahaetu-radhikaM muravidvishOpi <br>
+            eeshan-nisheedatu mayi kshaNameekshaNaardhaM <br>
+            iMdeevarOdara-sahOdara-miMdiraayaa: <br>
+        </span>
 
-    viSvaamaraeMdra-padavibhrama-daana-dakshaM
-    aanaMdahaetu-radhikaM muravidvishOpi
-    eeshan-nisheedatu mayi kshaNameekshaNaardhaM
-    iMdeevarOdara-sahOdara-miMdiraayaa:
-
-
-    ಆಮೀಲಿತಾಕ್ಷಮಧಿಗ್ಯಮ ಮುದಾ ಮುಕುಂದಂ
-    ಆನಂದಕಂದ-ಮನಿಮೇಷ-ಮನಂಗ-ತಂತ್ರಮ್ ।
-    ಆಕೇಕರ-ಸ್ಥಿತ-ಕನೀನಿಕ-ಪಕ್ಷ್ಮ-ನೇತ್ರಂ
-    ಭೂತ್ಯೈ-ಭವೆನ್ಮಮ-ಭುಜಂಗ-ಶಯಾಂಗನಾ-ಯಾಃ
-
-    आमीलिताक्षमधिगम्य मुदा मुकुन्दं
-    आनन्दकन्दमनिमेषमनङ्गतन्त्रम् ।
-    आकेकरस्थितकनीनिकपक्ष्मनेत्रं
-    भूत्यै भवेन्मम भुजङ्गशयाङ्गनायाः ॥ ४॥
-
-    aameelitaaksha madhigamya mudaa mukuMdaM
-    aanaMdakaMda manimaesha manaMga taMtraM
-    aakaekara sthita kaneenika pakshma naetraM
-    bhootyai bhavaenmama bhujaMga SayaaMganaayaa:
-
-    ಕಾಲಾಂಬುದಾಳಿ-ಲಲಿತೋರಸಿ ಕೈಟಭಾರೇಃ
-    ಧಾರಾ-ಧರೇ ಸ್ಫುರತಿ ಯಾ ತಡಿದಂಗನೇವ ।
-    ಮಾತುಸ್ಸಮಸ್ತಜಗತಾಂ ಮಹನೀಯಮೂರ್ತಿಃ
-    ಭದ್ರಾಣಿ ಮೇ ದಿಶತು ಭಾರ್ಗವ ನಂದನಾಯಾಃ
-
-    kaalaaMbudaali-lalitOrasi kaiTabhaarae:
-    dhaaraa dharae sphurati yaa taDidaMga naeva
-    maatu: samasta jagataaM mahaneeyamoorti:
-    bhadraaNi mae diSatu bhaargava naMdanaayaa:
-
-    कालाम्बुदालिललितोरसि कैटभारेः
-    धाराधरे स्फुरति या तडिदङ्गनेव ।
-    मातुस्समस्तजगतां महनीयमूर्तिः
-    भद्राणि मे दिशतु भार्गवनन्दनायाः ॥ ६॥
-
-    ಬಾಹ್ವಂತರೇ ಮಧುಜಿತಃ ಶ್ರಿತಕೌಸ್ತುಭೇ ಯಾ
-    ಹಾರಾವಳೀವ ಹರಿನೀಲ-ಮಯೀ ವಿಭಾತಿ ।
-    ಕಾಮಪ್ರದಾ ಭಗವತೋಽಪಿ ಕಟಾಕ್ಷಮಾಲಾ
-    ಕಳ್ಯಾಣಮಾವಹತು ಮೇ ಕಮಲಾಲಯಾ ಯಾಃ
-
-    baahvaMtarae murajita: Srithakaustubhae yaa
-    haaraavaLeeva harineela mayee vibhaati
-    kaamapradaa bhagavatOpi kaTaakshamaalaa
-    kalyaaNamaavahatu mae kamalaalayaayaa:
-
-    बाह्वन्तरे मधुजितः श्रितकौस्तुभे या
-    हारावळीव हरिनीलमयी विभाति ।
-    कामप्रदा भगवतोऽपि कटाक्षमाला
-    कळ्याणमावहतु मे कमलालयायाः ॥ ५॥
-
-    ಪ್ರಾಪ್ತಂ ಪದಂ ಪ್ರಥಮತಃ ಖಲು ಯತ್ಪ್ರಭಾವಾತ್
-    ಮಾಂಗಳ್ಯಭಾಜಿ ಮಧುಮಾಥಿನಿ ಮನ್ಮಥೇನ ।
-    ಮಯ್ಯಾಪತೇ ತ್ತದಿಹ ಮಂಥರ-ಮೀಕ್ಷಣಾರ್ಧಂ
-    ಮಂದಾಲಸಂ ಚ ಮಕರಾಲಯ-ಕನ್ಯಕಾಯಾಃ
-
-    praaptaM padaM prathamata: khalu yatprabhaavaat
-    maaMgalyabhaaji madhumaathini manmathaena
-    mayyaapatae ttadiha maMthara meekshaNaarthaM
-    maMdaalasaM cha makaraalaya kanyakaayaa:
-
-    प्राप्तं पदं प्रथमतः खलु यत्प्रभावात्
-    माङ्गळ्यभाजि मधुमाथिनि मन्मथेन ।
-    मय्यापतेत्तदिह मन्थरमीक्षणार्धं
-    मन्दालसं च मकरालयकन्यकायाः ॥ ७॥
+        <!-- विश्वामरेन्द्रपदविभ्रमदानदक्षं <br>
+        आनन्दहेतुरधिकं मुरविद्विषोऽपि । <br>
+        ईषन्निषीदतु मयि क्षणमीक्षणार्धम् <br>
+        इन्दीवरोदरसहोदरमिन्दिरायाः ॥ <br> -->
+    </p>
 
 
-    ದದ್ಯಾದ್ದಯಾನು-ಪವನೋ ದ್ರವಿಣಾಂಬುಧಾರಾಂ
-    ಅಸ್ಮಿನ್ನಕಿಂಚನ-ವಿಹಂಗ-ಶಿಶೌ ವಿಷಣ್ಣೇ ।
-    ದುಷ್ಕರ್ಮ-ಘರ್ಮ-ಮಪನೀಯ ಚಿರಾಯ ದೂರಂ
-    ನಾರಾಯಣ-ಪ್ರಣಯಿನೀ-ನಯನಾಂಬುವಾಹಃ 
+    <p>
+        ಆಮೀಲಿತಾಕ್ಷಮಧಿಗ್ಯಮ ಮುದಾ ಮುಕುಂದಂ <br>
+        ಆನಂದಕಂದ-ಮನಿಮೇಷ-ಮನಂಗ-ತಂತ್ರಮ್ । <br>
+        ಆಕೇಕರ-ಸ್ಥಿತ-ಕನೀನಿಕ-ಪಕ್ಷ್ಮ-ನೇತ್ರಂ <br>
+        ಭೂತ್ಯೈ-ಭವೆನ್ಮಮ-ಭುಜಂಗ-ಶಯಾಂಗನಾ-ಯಾಃ <br>
 
-    dadyaaddayaanupavanO draviNaaMbudhaaraaM
-    asminnakiMchana-vihaMga-SiSau vishaNNae
-    dushkarma-gharma-mapaneeya chiraaya dooraM
-    naaraayaNa-praNayinee-nayanaaMbuvaaha:
+        <span class="ENG">
+            aameelitaaksha madhigamya mudaa mukuMdaM <br>
+            aanaMdakaMda manimaesha manaMga taMtraM <br>
+            aakaekara sthita kaneenika pakshma naetraM <br>
+            bhootyai bhavaenmama bhujaMga SayaaMganaayaa: <br>
+        </span>
 
-    दद्याद्दयानुपवनो द्रविणाम्बुधारां
-    अस्मिन्नकिञ्चनविहङ्गशिशौ विषण्णे ।
-    दुष्कर्मघर्ममपनीय चिराय दूरं
-    नारायणप्रणयिनीनयनाम्बुवाहः ॥
+        <!-- आमीलिताक्षमधिगम्य मुदा मुकुन्दं <br>
+        आनन्दकन्दमनिमेषमनङ्गतन्त्रम् । <br>
+        आकेकरस्थितकनीनिकपक्ष्मनेत्रं <br>
+        भूत्यै भवेन्मम भुजङ्गशयाङ्गनायाः ॥ ४॥ <br> -->
+    </p>
 
+    <p>
+        ಕಾಲಾಂಬುದಾಳಿ-ಲಲಿತೋರಸಿ ಕೈಟಭಾರೇಃ <br>
+        ಧಾರಾ-ಧರೇ ಸ್ಫುರತಿ ಯಾ ತಡಿದಂಗನೇವ । <br>
+        ಮಾತುಸ್ಸಮಸ್ತಜಗತಾಂ ಮಹನೀಯಮೂರ್ತಿಃ <br>
+        ಭದ್ರಾಣಿ ಮೇ ದಿಶತು ಭಾರ್ಗವ ನಂದನಾಯಾಃ <br>
+
+        <span class="ENG">
+            kaalaaMbudaali-lalitOrasi kaiTabhaarae: <br>
+            dhaaraa dharae sphurati yaa taDidaMga naeva <br>
+            maatu: samasta jagataaM mahaneeyamoorti: <br>
+            bhadraaNi mae diSatu bhaargava naMdanaayaa: <br>
+        </span>
+
+        <!-- कालाम्बुदालिललितोरसि कैटभारेः <br>
+        धाराधरे स्फुरति या तडिदङ्गनेव । <br>
+        मातुस्समस्तजगतां महनीयमूर्तिः <br>
+        भद्राणि मे दिशतु भार्गवनन्दनायाः ॥ ६॥ <br> -->
+    </p>
+
+    <p>
+        ಬಾಹ್ವಂತರೇ ಮಧುಜಿತಃ ಶ್ರಿತಕೌಸ್ತುಭೇ ಯಾ <br>
+        ಹಾರಾವಳೀವ ಹರಿನೀಲ-ಮಯೀ ವಿಭಾತಿ । <br>
+        ಕಾಮಪ್ರದಾ ಭಗವತೋಽಪಿ ಕಟಾಕ್ಷಮಾಲಾ <br>
+        ಕಳ್ಯಾಣಮಾವಹತು ಮೇ ಕಮಲಾಲಯಾ ಯಾಃ <br>
+
+        <span class="ENG">
+            baahvaMtarae murajita: Srithakaustubhae yaa <br>
+            haaraavaLeeva harineela mayee vibhaati <br>
+            kaamapradaa bhagavatOpi kaTaakshamaalaa <br>
+            kalyaaNamaavahatu mae kamalaalayaayaa: <br>
+        </span>
+
+        <!-- बाह्वन्तरे मधुजितः श्रितकौस्तुभे या <br>
+        हारावळीव हरिनीलमयी विभाति । <br>
+        कामप्रदा भगवतोऽपि कटाक्षमाला <br>
+        कळ्याणमावहतु मे कमलालयायाः ॥ ५॥ <br> -->
+    </p>
+
+    <p>
+        ಪ್ರಾಪ್ತಂ ಪದಂ ಪ್ರಥಮತಃ ಖಲು ಯತ್ಪ್ರಭಾವಾತ್ <br>
+        ಮಾಂಗಳ್ಯಭಾಜಿ ಮಧುಮಾಥಿನಿ ಮನ್ಮಥೇನ । <br>
+        ಮಯ್ಯಾಪತೇ ತ್ತದಿಹ ಮಂಥರ-ಮೀಕ್ಷಣಾರ್ಧಂ <br>
+        ಮಂದಾಲಸಂ ಚ ಮಕರಾಲಯ-ಕನ್ಯಕಾಯಾಃ <br>
+
+        <span class="ENG">
+            praaptaM padaM prathamata: khalu yatprabhaavaat <br>
+            maaMgalyabhaaji madhumaathini manmathaena <br>
+            mayyaapatae ttadiha maMthara meekshaNaarthaM <br>
+            maMdaalasaM cha makaraalaya kanyakaayaa: <br>
+        </span>
+
+        <!-- प्राप्तं पदं प्रथमतः खलु यत्प्रभावात् <br>
+        माङ्गळ्यभाजि मधुमाथिनि मन्मथेन । <br>
+        मय्यापतेत्तदिह मन्थरमीक्षणार्धं <br>
+        मन्दालसं च मकरालयकन्यकायाः ॥ ७॥ <br> -->
+    </p>
+
+    <p>
+        ದದ್ಯಾದ್ದಯಾನು-ಪವನೋ ದ್ರವಿಣಾಂಬುಧಾರಾಂ <br>
+        ಅಸ್ಮಿನ್ನಕಿಂಚನ-ವಿಹಂಗ-ಶಿಶೌ ವಿಷಣ್ಣೇ । <br>
+        ದುಷ್ಕರ್ಮ-ಘರ್ಮ-ಮಪನೀಯ ಚಿರಾಯ ದೂರಂ <br>
+        ನಾರಾಯಣ-ಪ್ರಣಯಿನೀ-ನಯನಾಂಬುವಾಹಃ <br>
+
+        <span class="ENG">
+            dadyaaddayaanupavanO draviNaaMbudhaaraaM <br>
+            asminnakiMchana-vihaMga-SiSau vishaNNae <br>
+            dushkarma-gharma-mapaneeya chiraaya dooraM <br>
+            naaraayaNa-praNayinee-nayanaaMbuvaaha: <br>
+        </span>
+
+        <!-- दद्याद्दयानुपवनो द्रविणाम्बुधारां <br>
+        अस्मिन्नकिञ्चनविहङ्गशिशौ विषण्णे । <br>
+        दुष्कर्मघर्ममपनीय चिराय दूरं <br>
+        नारायणप्रणयिनीनयनाम्बुवाहः ॥ <br> -->
+    </p>
+
+    <p>
+        ಇಷ್ಟಾ ವಿಶಿಷ್ಟಮತಯೋಪಿ ಯಯಾ ದಯಾರ್ದ್ರ <br>
+        ದೃಷ್ಟಾ ಸ್ತ್ರಿವಿಷ್ಟಪ ಪದಂ ಸುಲಭಂ ಲಭಂತೇ । <br>
+        ದೃಷ್ಟಿಃ ಪ್ರಹೃಷ್ಟ ಕಮಲೋದರ ದೀಪ್ತಿರಿಷ್ಟಾಂ <br>
+        ಪುಷ್ಟಿಂ ಕೃಷೀಷ್ಟ ಮಮ ಪುಷ್ಕರ ವಿಷ್ಟರಾ ಯಾಃ <br>
+    </p>
+
+    <p>
+        ಗೀರ್ದೇವ ತೇತಿ ಗರುಡಧ್ವಜ ಸುಂದರೀತಿ <br>
+        ಶಾಕಂಬರೀತಿ ಶಶಿಶೇಖರ ವಲ್ಲಭೇತಿ । <br>
+        ಸೃಷ್ಟಿ ಸ್ಥಿತಿ ಪ್ರಳಯ ಕೇಳಿಷು ಸಂಸ್ಥಿತಾಯೈ <br>
+        ತಸ್ಯೈ ನಮಸ್ತ್ರಿಭುವನೈಕ ಗುರೋಸ್ತರುಣ್ಯೈ <br>
+    </p>
+
+    <p>
+        ಶ್ರುತ್ಯೈ ನಮೋಽಸ್ತು ಶುಭಕರ್ಮ ಫಲಪ್ರಸೂತ್ಯೈ <br>
+        ರತ್ಯೈ ನಮೋಽಸ್ತು ರಮಣೀಯ ಗುಣಾರ್ಣವಾಯೈ । <br>
+        ಶಕ್ತ್ಯೈ ನಮೋಽಸ್ತು ಶತಪತ್ರ ನಿಕೇತನಾಯೈ <br>
+        ಪುಷ್ಟ್ಯೈ ನಮೋಽಸ್ತು ಪುರುಷೋತ್ತಮ ವಲ್ಲಭಾಯೈ <br>
+    </p>
+
+    <p>
+        ನಮೋಽಸ್ತು ನಾಳೀಕ ನಿಭಾನನಾಯೈ <br>
+        ನಮೋಽಸ್ತು ದುಗ್ಧೋದಧಿ ಜನ್ಮಭೂಮ್ಯೈ । <br>
+        ನಮೋಽಸ್ತು ಸೋಮಾಮೃತ ಸೋದರಾಯೈ <br>
+        ನಮೋಽಸ್ತು ನಾರಾಯಣ ವಲ್ಲಭಾಯೈ <br>
+    </p>
+
+    <p>
+        ನಮೋಽಸ್ತು ಹೇಮಾಂಬುಜ ಪೀಠಿಕಾಯೈ <br>
+        ನಮೋಽಸ್ತು ಭೂಮಂಡಲ ನಾಯಿಕಾಯೈ । <br>
+        ನಮೋಽಸ್ತು ದೇವಾದಿ ದಯಾಪರಾಯೈ <br>
+        ನಮೋಽಸ್ತು ಶಾರಂಗಾಯುಧ ವಲ್ಲಭಾಯೈ <br>
+    </p>
+
+    <p>
+        ನಮೋಽಸ್ತು ದೇವ್ಯೈ ಭೃಗುನಂದನಾಯೈ <br>
+        ನಮೋಽಸ್ತು ವಿಷ್ಣೋರುರಸಿ ಸ್ಥಿತಾಯೈ । <br>
+        ನಮೋಽಸ್ತು ಲಕ್ಷ್ಮ್ಯೈ ಕಮಲಾಲಯಾಯೈ <br>
+        ನಮೋಽಸ್ತು ದಾಮೋದರ ವಲ್ಲಭಾಯೈ <br>
+    </p>
+
+    <p>
+        ನಮೋಽಸ್ತು ಕಾಂತ್ಯೈ ಕಮಲೇಕ್ಷಣಾಯೈ <br>
+        ನಮೋಽಸ್ತು ಭೂತ್ಯೈ ಭುವನಪ್ರಸೂತ್ಯೈ । <br>
+        ನಮೋಽಸ್ತು ದೇವಾದಿಭಿರರ್ಚಿತಾಯೈ <br>
+        ನಮೋಽಸ್ತು ನಂದಾತ್ಮಜ ವಲ್ಲಭಾಯೈ <br>
+    </p>
+
+    <p>
+        ಸಂಪತ್ಕರಾಣಿ ಸಕಲೇಂದ್ರಿಯ ನಂದನಾನಿ <br>
+        ಸಾಮ್ರಾಜ್ಯ ದಾನವಿಭವಾನಿ ಸರೋರುಹಾಕ್ಷಿ । <br>
+        ತ್ವದ್ವಂದನಾನಿ ದುರಿತೋ ಧ್ಧರಣೋದ್ಯತಾನಿ <br>
+        ಮಾಮೇವ ಮಾತರನಿಶಂ ಕಲಯಂತು ನಾನ್ಯೇ <br>
+    </p>
+
+    <p>
+        ಯತ್ಕಟಾಕ್ಷ ಸಮುಪಾಸನಾ ವಿಧಿಃ <br>
+        ಸೇವಕಸ್ಯ ಸಕಲಾರ್ಥ ಸಂಪದಃ । <br>
+        ಸಂತನೋತಿ ವಚನಾಂಗ ಮಾನಸೈಃ <br>
+        ತ್ವಾಂ ಮುರಾರಿಹೃದಯೇಶ್ವರೀಂ ಭಜೇ <br>
+    </p>
+
+    <p>
+        ಸರಸಿಜನಿಲಯೇ ಸರೋಜ ಹಸ್ತೇ <br>
+        ಧವಳತರಾಂಶುಕ ಗಂಧಮಾಲ್ಯಶೋಭೇ । <br>
+        ಭಗವತಿ ಹರಿವಲ್ಲಭೇ ಮನೋಜ್ಞೇ <br>
+        ತ್ರಿಭುವನ ಭೂತಿ ಕರೀ ಪ್ರಸೀದಮಹ್ಯಮ್ <br>
+    </p>
+
+    <p>
+        ದಿಗ್ಘಸ್ತಿಭಿಃ ಕನಕ ಕುಂಭಮುಖಾವಸೃಷ್ಟ <br>
+        ಸ್ವರ್ವಾಹಿನೀ ವಿಮಲಚಾರುಜಲಾಪ್ಲುತಾಂಗೀಮ್ । <br>
+        ಪ್ರಾತರ್ನಮಾಮಿ ಜಗತಾಂ ಜನನೀಂ ಅಶೇಷ <br>
+        ಲೋಕಧಿನಾಥ ಗೃಹಣೀಮ್ ಅಮೃತಾಬ್ಧಿಪುತ್ರೀಮ್ <br>
+    </p>
 
     <h3>ಪ್ರಕ್ಷಿಪ್ತ ಶ್ಲೋಕಗಳು (Prakishipta Sholka)</h3>
 
+    <p>
+        ಬಿಲ್ವಾಟವಿ ಮಧ್ಯ ಲಸತ್ ಸರೋಜೆ <br>
+        ಸಹಸ್ರ ಪತ್ರೆ ಸುಖಿ ಸನ್ನಿವಿಷ್ಟಮ್ | <br>
+        ಅಷ್ಟ ಪದಾಂ ಭೋರುಹ ಪಾಣಿಪದ್ಮಾಮ್ <br>
+        ಸ್ಟುವರ್ಣ ವರ್ಣಾಮ್ ಪ್ರಣಮಾಮಿ ಲಕ್ಷ್ಮೀಮ್ <br>
+    </p>
+
+    <p>
+        ಅಂಬೋ ರುಹಂ ಜನ್ಮ ಗೃಹಂ ಭಾವತ್ಯಾ: <br>
+        ವಕ್ಷಸ್ಥಲಂ ಭರ್ತುಗೃಹಂ ಮುರಾರೇ: <br>
+        ಕಾರುಣ್ಯತಃ ಕಲ್ಪಯ ಪದ್ಮವಾಸೆ | <br>
+        ಲೀಲಾಗೃಹಂ, ಮೆ ಹೃದಯಾರವಿಂದಂ <br>
+    </p>
+
     <h3>ಫಲ ಶ್ರುತಿ (Phala Shruthi)</h3>
 
+    <p>
+        ಸ್ತುವಂತಿ ಯೇ ಸ್ತುತಿಭಿರಮೂಭಿರನ್ವಹಂ <br>
+        ತ್ರಯೀಮಯೀಂ ತ್ರಿಭುವನಮಾತರಂ ರಮಾಮ್ । <br>
+        ಗುಣಾಧಿಕಾ ಗುರುತುರ ಭಾಗ್ಯ ಭಾಜಿನೋ <br>
+        ಭವಂತಿ ತೇ ಭುವಿ, ಬುಧ ಭಾವಿತಾಶಯಾಃ <br>
+    </p>
+
+    <p>
+        ಸುವರ್ಣಧಾರಾ ಸ್ತೋತ್ರಂ ಯಚ್ಛಂಕರಾಚಾರ್ಯ ನಿರ್ಮಿತಂ <br>
+        ತ್ರಿಸಂಧ್ಯಂ ಯಃ ಪಠೇನ್ನಿತ್ಯಂ ಸ ಕುಬೇರಸಮೋ ಭವೇತ್ <br>
+    </p>
+
+    <h3>Reference Links:</h3>
+    <ul>
+        <li>https://youtu.be/LXyr_0BswXA?si=GPj4tqakJ2c2i-49</li>
+        <li>https://vignanam.org/kannada/kanaka-dhaara-stotram.html</li>
+        <li>https://sanskritdocuments.org/doc_devii/kanaka.html</li>
+        <li>https://www.facebook.com/syllabsim/posts/complete-stotra-श्री-श्री-कनकधारा-स्तवः-ॐ-अस्य-श्री-कनकधारा-यन्त्र-मन्त्रस्य-श्र/412068165585451/?locale=hi_IN
+        </li>
+        <li>https://drive.google.com/file/d/1AWCwmi7mpQCfR4R1CpoOcyluL6jX51em/view</li>
+        <li>https://drive.google.com/file/d/1edGEUu0x2Sf4Ldyt4f1A8k4ZcujwM4tf/view</li>
+    </ul>
+
 </body>
 
-    <!-- Centralized Scripts -->
-    <script src="../scripts/common.js"></script>
+<!-- Centralized Scripts -->
+<script src="../scripts/common.js"></script>
 </body>
+
 </html>
